--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "ablin42",
-  "version": "1.0.0",
-  "description": "Portfolio website for ablin42",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ablin42/ablin42.git"
-  },
-  "author": "ablin42",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ablin42/ablin42/issues"
-  },
-  "homepage": "https://github.com/ablin42/ablin42#readme",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.5",
-    "express": "^4.17.1",
-    "express-flash": "0.0.2",
-    "express-session": "^1.17.1",
-    "flash": "^1.1.0",
-    "helmet": "^4.1.0",
-    "mongo-sanitize": "^1.1.0"
-  }
+	"name": "ablin42",
+	"version": "1.0.0",
+	"description": "Portfolio website for ablin42",
+	"main": "app.js",
+	"scripts": {
+		"start": "node --optimize_for_size --max_old_space_size=460 --gc_interval=100 app",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/ablin42/ablin42.git"
+	},
+	"author": "ablin42",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/ablin42/ablin42/issues"
+	},
+	"homepage": "https://github.com/ablin42/ablin42#readme",
+	"dependencies": {
+		"body-parser": "^1.19.0",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"ejs": "^3.1.5",
+		"express": "^4.17.1",
+		"express-flash": "0.0.2",
+		"express-session": "^1.17.1",
+		"flash": "^1.1.0",
+		"helmet": "^4.1.0",
+		"mongo-sanitize": "^1.1.0"
+	}
 }
