--- a/package.json
+++ b/package.json
@@ -19,14 +19,22 @@
 	"homepage": "https://github.com/ablin42/ablin42#readme",
 	"dependencies": {
 		"body-parser": "^1.19.0",
+		"connect-mongo": "^3.2.0",
 		"cors": "^2.8.5",
+		"csurf": "^1.11.0",
 		"dotenv": "^8.2.0",
 		"ejs": "^3.1.5",
 		"express": "^4.17.1",
 		"express-flash": "0.0.2",
+		"express-rate-limit": "^5.1.3",
+		"express-sanitizer": "^1.0.5",
 		"express-session": "^1.17.1",
+		"express-validator": "^6.6.1",
 		"flash": "^1.1.0",
 		"helmet": "^4.1.0",
-		"mongo-sanitize": "^1.1.0"
+		"mongo-sanitize": "^1.1.0",
+		"mongoose": "^5.10.3",
+		"nodemailer": "^6.4.11",
+		"rate-limit-mongo": "^2.2.0"
 	}
 }
