--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "app.js",
 	"scripts": {
 		"start": "node --optimize_for_size --max_old_space_size=460 --gc_interval=100 app",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "tsc -p ."
 	},
 	"repository": {
 		"type": "git",
@@ -36,5 +37,11 @@
 		"mongoose": "^5.10.3",
 		"nodemailer": "^6.4.11",
 		"rate-limit-mongo": "^2.2.0"
+	},
+	"devDependencies": {
+		"@types/express": "^4.17.8",
+		"@types/node": "^14.6.4",
+		"ts-node": "^9.0.0",
+		"typescript": "^4.0.2"
 	}
 }
