--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
 	"description": "Portfolio website for ablin42",
 	"main": "app.js",
 	"scripts": {
-		"start": "node --optimize_for_size --max_old_space_size=460 --gc_interval=100 app",
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "tsc -p ."
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
 	},
 	"repository": {
 		"type": "git",
@@ -35,12 +36,16 @@
 		"helmet": "^4.1.0",
 		"mongo-sanitize": "^1.1.0",
 		"mongoose": "^5.12.5",
+		"next": "^12.2.3",
 		"nodemailer": "^6.4.13",
-		"rate-limit-mongo": "^2.2.0"
+		"rate-limit-mongo": "^2.2.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.8",
 		"@types/node": "^14.6.4",
+		"@types/react": "^18.0.15",
 		"ts-node": "^9.0.0",
 		"typescript": "^4.0.2"
 	}
