--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"@types/express": "^4.17.8",
 		"@types/node": "^14.6.4",
 		"@types/react": "^18.0.15",
+		"@types/styled-components": "^5.1.25",
 		"ts-node": "^9.0.0",
 		"typescript": "^4.0.2"
 	}
