--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
 		"styled-components": "^5.3.5"
 	},
 	"devDependencies": {
+		"@types/node": "^18.6.5",
 		"@types/react": "^18.0.15",
 		"@types/styled-components": "^5.1.25",
+		"babel-plugin-styled-components": "^2.0.7",
 		"ts-node": "^9.0.0",
 		"typescript": "^4.0.2"
 	}
