--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
 		"watch": true,
 		"incremental": true
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "postcss.config.js"],
 	"exclude": ["node_modules"]
 }
